unpackaged/objects/Country_Configuration__mdt.object
<CustomObject>
  <fields>
    <fullName>Account_Default_User_ID__c</fullName>
    <inlineHelpText>This user ID will be assigned to new accounts being imported from an ERP system if the ERP user's ID is no recognised</inlineHelpText>
    <label>Account Default User ID</label>
    <length>18</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <referenceTo>Market__mdt</referenceTo>
    <relationshipLabel>Countries</relationshipLabel>
    <relationshipName>Countries</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
  </fields>
  <fields>
    <fullName>Movex_Prefix__c</fullName>
    <label>Movex Prefix</label>
    <length>12</length>
    <type>Text</type>
  </fields>
  <label>Country</label>
  <pluralLabel>Countries</pluralLabel>
</CustomObject>